apps/media/radarr/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-radarr/
# https://github.com/Radarr/Radarr
#

apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: radarr
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: radarr
  type: ClusterIP
  ports:
    - name: http
      port: 7878
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: radarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: radarr
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: sheol
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr:6.4.4 # {"$imagepolicy": "media:radarr"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 150Mi
            limits:
              cpu: 500m
              memory: 750Mi
          volumeMounts:
            - name: radarr-pvc
              mountPath: /config
            - name: media-data-pvc
              mountPath: /data
      volumes:
        - name: radarr-pvc
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
