apps/media/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.powell.place`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: radarr
          port: http
